--- a/index.html
+++ b/index.html
@@ -119,7 +119,7 @@
 		 crossorigin="anonymous"></script>
 		<script>
 			if ('serviceWorker' in navigator) {
-				navigator.serviceWorker.register('./js/sw.js')
+				navigator.serviceWorker.register('sw.js')
 					.then(reg => console.log('完成 SW 設定!', reg))
 					.catch(err => console.log('Error!', err));
 			}
