--- a/index.html
+++ b/index.html
@@ -28,17 +28,17 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
 						<li class="nav-item info">
-							<a class="nav-link bg-transparent active" data-toggle="pill" href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
+							<a class="nav-link bg-transparent active" href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="https://japan-drama.herokuapp.com/" style="font-size: 18px;">日劇</a>
+							<a class="nav-link bg-transparent" href="https://japan-drama.herokuapp.com/" style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
-							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='data_analyze.html';"
+							<a class="nav-link bg-transparent" onclick="javascript:location.href='data_analyze.html';"
 							 href="#data_analyze" style="font-size: 18px;">電影</a>
 						</li>
 						<li class="nav-item sport_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">PTT</a>
+							<a class="nav-link bg-transparent" href="#" style="font-size: 18px;">PTT</a>
 						</li>
 					</ul>
 				</div>
