--- a/index.html
+++ b/index.html
@@ -31,7 +31,7 @@
 							<a class="nav-link bg-transparent active" data-toggle="pill" href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='https://japan-drama.herokuapp.com/';"
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='new_file.html';"
 							 href="#" style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
