--- a/index.html
+++ b/index.html
@@ -12,6 +12,8 @@
 		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
 
 		<title>宅宅</title>
+		<link rel="icon" href="192x192.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="192x192.png" type="image/x-icon" />
 	</head>
 	<body>
 		<!-- 標頭 -->
