--- a/movies.html
+++ b/movies.html
@@ -61,9 +61,10 @@
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
 					 aria-expanded="false" id="boardpage">排行榜</a>
 					<div class="dropdown-menu">
-						<a class="dropdown-item" id="b1" href="#">人氣排行</a>
-						<a class="dropdown-item" id="b2" href="#">評分排行</a>
-						<a class="dropdown-item" id="b3" href="#">期待排行</a>
+						<a class="dropdown-item" id="b1" href="#">台北票房榜</a>
+						<a class="dropdown-item" id="b2" href="#">全美票房榜</a>
+						<a class="dropdown-item" id="b3" href="#">年度票房榜</a>
+						<a class="dropdown-item" id="b4" href="#">預告片榜</a>
 					</div>
 				</li>
 				<li class="nav-item">
