--- a/index.html
+++ b/index.html
@@ -34,7 +34,8 @@
 							 href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">日劇</a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
+							 style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
@@ -109,8 +110,9 @@
 
 			<!-- 顯示搜尋結果 -->
 			<div class="display_2 card-columns"></div>
-		</div>
 
+			<!-- 新聞分頁 -->
+			<div class="news_pagination"></div>
 		</div>
 		<!-- Optional JavaScript -->
 		<!-- jQuery first, then Popper.js, then Bootstrap JS -->
