--- a/movies.html
+++ b/movies.html
@@ -29,15 +29,16 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
 						<li class="nav-item info">
-							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';" href="#"
-							 style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';"
+							 href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">日劇</a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
+							 style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
-							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='movies.html';"
-							 href="#" style="font-size: 18px;">電影</a>
+							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
+							 style="font-size: 18px;">電影</a>
 						</li>
 						<li class="nav-item sport_page">
 							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">PTT</a>
@@ -55,7 +56,7 @@
 					<a class="nav-link active" id="firstpage" href="#">首頁</a>
 				</li>
 				<li class="nav-item">
-					<a class="nav-link" id="seasonpage" href="#">最新電影</a>
+					<a class="nav-link" id="seasonpage" href="#">本週新片</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
