--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 		<!-- 標頭 -->
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
 			<div class="container">
-				<a class="navbar-brand" href="#" style="font-size: 24px;">
+				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
 					宅宅
 				</a>
@@ -42,7 +42,8 @@
 							 style="font-size: 18px;">電影</a>
 						</li>
 						<li class="nav-item sport_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">PTT</a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='ptt.html';" href="#"
+							 style="font-size: 18px;">PTT</a>
 						</li>
 					</ul>
 				</div>
@@ -54,7 +55,7 @@
 			<!-- 選單列 -->
 			<ul class="nav nav-pills mb-3" id="select">
 				<li class="nav-item">
-					<a class="nav-link active" id="firstpage" href="#">首頁</a>
+					<a class="nav-link active" id="firstpage" href="#">動畫新聞</a>
 				</li>
 				<li class="nav-item dropdown">
 					<a class="nav-link dropdown-toggle" data-toggle="dropdown" href="#" role="button" aria-haspopup="true"
