--- a/japandrama.html
+++ b/japandrama.html
@@ -85,7 +85,7 @@
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
 			<div class="container">
-				<a class="navbar-brand" href="#" style="font-size: 24px;">
+				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
 					宅宅
 				</a>
@@ -96,19 +96,20 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
 						<li class="nav-item info">
-							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';"
-							 href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';" href="#"
+							 style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
-							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
-							 style="font-size: 18px;">日劇</a>
+							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='japandrama.html';"
+							 href="#" style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
 							 style="font-size: 18px;">電影</a>
 						</li>
 						<li class="nav-item sport_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">PTT</a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='ptt.html';" href="#"
+							 style="font-size: 18px;">PTT</a>
 						</li>
 					</ul>
 				</div>
