--- a/movies.html
+++ b/movies.html
@@ -18,7 +18,7 @@
 		<!-- 標頭 -->
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
 			<div class="container">
-				<a class="navbar-brand" href="#" style="font-size: 24px;">
+				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
 					宅宅
 				</a>
@@ -29,19 +29,20 @@
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
 						<li class="nav-item info">
-							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';"
-							 href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';" href="#"
+							 style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
 						<li class="nav-item map_page">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
 							 style="font-size: 18px;">日劇</a>
 						</li>
 						<li class="nav-item data_analyze">
-							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
-							 style="font-size: 18px;">電影</a>
+							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='movies.html';"
+							 href="#" style="font-size: 18px;">電影</a>
 						</li>
 						<li class="nav-item sport_page">
-							<a class="nav-link bg-transparent" data-toggle="pill" href="#" style="font-size: 18px;">PTT</a>
+							<a class="nav-link bg-transparent" data-toggle="pill" href="#" onclick="javascript:location.href='ptt.html';"
+							 style="font-size: 18px;">PTT</a>
 						</li>
 					</ul>
 				</div>
@@ -53,7 +54,7 @@
 			<!-- 選單列 -->
 			<ul class="nav nav-pills mb-3" id="select">
 				<li class="nav-item">
-					<a class="nav-link active" id="firstpage" href="#">首頁</a>
+					<a class="nav-link active" id="firstpage" href="#">電影新聞</a>
 				</li>
 				<li class="nav-item">
 					<a class="nav-link" id="seasonpage" href="#">本週新片</a>
