--- a/ptt.html
+++ b/ptt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>PTT_Crawler</title>
+		<title>宅宅</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -16,6 +16,8 @@
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;400;700;900&family=Roboto&display=swap"
 		 rel="stylesheet"> <!-- font link from google -->
 		<link rel="stylesheet" type="text/css" href="./css/ptt.css">
+		<link rel="icon" href="192x192.png" type="image/x-icon" />
+		<link rel="shortcut icon" href="192x192.png" type="image/x-icon" />
 	</head>
 
 	<body>
