--- a/movies.html
+++ b/movies.html
@@ -10,6 +10,9 @@
 		 crossorigin="anonymous">
 		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
 
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;400;700;900&family=Roboto&display=swap"
+		 rel="stylesheet"> <!-- font link from google -->
+
 		<title>宅宅</title>
 		<link rel="icon" href="192x192.png" type="image/x-icon" />
 		<link rel="shortcut icon" href="192x192.png" type="image/x-icon" />
