--- a/japandrama.html
+++ b/japandrama.html
@@ -1,6 +1,5 @@
-<!doctype html>
-<html lang="en">
-
+<!DOCTYPE html>
+<html>
 	<head>
 		<!-- Required meta tags -->
 		<meta charset="utf-8">
@@ -8,8 +7,10 @@
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
 		<script src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
 		<!-- Bootstrap CSS -->
-		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/css/bootstrap.min.css" integrity="sha384-GJzZqFGwb1QTTN6wy59ffF1BuGJpLSa9DkKMp0DgiMDm4iYMj70gZWKYbI706tWS"
+		<link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
 		 crossorigin="anonymous">
+		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;400;700;900&family=Roboto&display=swap"
+		 rel="stylesheet"> <!-- font link from google -->
 		<title>宅宅</title>
 		<link rel="icon" href="192x192.png" type="image/x-icon" />
 		<link rel="shortcut icon" href="192x192.png" type="image/x-icon" />
@@ -17,7 +18,7 @@
 	</head>
 
 	<body>
-		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
+		<nav id="fuck" class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
 			<div class="container">
 				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
@@ -58,12 +59,6 @@
 				</form>
 			</div>
 		</div>
-
-
-
-
-
-
 		<div class="container mt-2">
 			<div id="carouselExampleControls" class="carousel slide" data-ride="carousel">
 				<div class="carousel-inner">
@@ -77,22 +72,8 @@
 					<span class="sr-only">Next</span>
 				</a>
 			</div>
-
-
-
-
-
-
-
-
-
-
-			<div class="row cardset">
-
-
-			</div>
+			<div class="row cardset"></div>
 		</div>
-
 		<div class="container-fluid">
 			<div class="row  justify-content-center">
 				<nav aria-label="Page navigation example">
@@ -104,9 +85,9 @@
 
 
 
-		<script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.6/umd/popper.min.js" integrity="sha384-wHAiFfRlMFy6i5SRaxvfOCifBUQy1xHdJ/yoi7FRNXMRBu5WHdZYu1hA6ZOblgut"
+		<script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
 		 crossorigin="anonymous"></script>
-		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.2.1/js/bootstrap.min.js" integrity="sha384-B0UglyR+jN6CkvvICOB2joaf5I4l3gm9GU6Hc1og6Ls7i6U/mkkaduKaBhlAXv9k"
+		<script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 		 crossorigin="anonymous"></script>
 		<script src="./js/japandrama.js" type="text/javascript" charset="utf-8"></script>
 	</body>
