--- a/index.html
+++ b/index.html
@@ -10,11 +10,11 @@
 		 crossorigin="anonymous">
 		<link rel="manifest" href="manifest.json">
 		<link rel="stylesheet" type="text/css" href="./css/styles.css" />
-		
+
 		<link href="https://fonts.googleapis.com/css2?family=Noto+Sans+TC:wght@100;400;700;900&family=Roboto&display=swap"
 		 rel="stylesheet"> <!-- font link from google -->
 
-		<title>宅宅</title>
+		<title>宅宅懶人搜</title>
 		<link rel="icon" href="192x192.png" type="image/x-icon" />
 		<link rel="shortcut icon" href="192x192.png" type="image/x-icon" />
 	</head>
@@ -24,7 +24,7 @@
 			<div class="container">
 				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
-					宅宅
+					宅宅懶人搜
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
 				 aria-expanded="false" aria-label="Toggle navigation">
@@ -32,21 +32,25 @@
 				</button>
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
-						<li class="nav-item info">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='index.html';"
 							 href="#" style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item map_page">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
 							 style="font-size: 18px;">日劇</a>
 						</li>
-						<li class="nav-item data_analyze">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
 							 style="font-size: 18px;">電影</a>
 						</li>
-						<li class="nav-item sport_page">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='ptt.html';" href="#"
 							 style="font-size: 18px;">PTT</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='actor.html';" href="#"
+							 style="font-size: 18px;">演員搜</a>
 						</li>
 					</ul>
 				</div>
