--- a/ptt.html
+++ b/ptt.html
@@ -2,7 +2,7 @@
 <html lang="en">
 
 	<head>
-		<title>宅宅</title>
+		<title>宅宅懶人搜</title>
 		<meta charset="utf-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
 		<meta http-equiv="X-UA-Compatible" content="ie=edge" />
@@ -26,7 +26,7 @@
 			<div class="container">
 				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
-					宅宅
+					宅宅懶人搜
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
 				 aria-expanded="false" aria-label="Toggle navigation">
@@ -34,21 +34,25 @@
 				</button>
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
 					<ul class="navbar-nav nav nav-pills">
-						<li class="nav-item info">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='index.html';" href="#"
 							 style="font-size: 18px;">動畫<span class="sr-only">(current)</span></a>
 						</li>
-						<li class="nav-item map_page">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='japandrama.html';" href="#"
 							 style="font-size: 18px;">日劇</a>
 						</li>
-						<li class="nav-item data_analyze">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='movies.html';" href="#"
 							 style="font-size: 18px;">電影</a>
 						</li>
-						<li class="nav-item sport_page">
+						<li class="nav-item">
 							<a class="nav-link bg-transparent active" data-toggle="pill" onclick="javascript:location.href='ptt.html';" href="#"
 							 style="font-size: 18px;">PTT</a>
+						</li>
+						<li class="nav-item">
+							<a class="nav-link bg-transparent" data-toggle="pill" onclick="javascript:location.href='actor.html';" href="#"
+							 style="font-size: 18px;">演員搜</a>
 						</li>
 					</ul>
 				</div>
