--- a/actor.html
+++ b/actor.html
@@ -18,7 +18,7 @@
         {
             font-family: -apple-system, BlinkMacSystemFont, 'Noto Sans TC', 'Microsoft JhengHei', 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif
         }
-    </style>
+		</style>
 
 		<!-- 標頭 -->
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
@@ -28,7 +28,7 @@
 					宅宅懶人搜
 				</a>
 				<button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav"
-				 aria-expanded="false" aria-label="Toggle navigation">
+				 aria-expanded="false" aria-label="Toggle navigation" style="border: none;padding: 0;">
 					<span class="navbar-toggler-icon"></span>
 				</button>
 				<div class="collapse navbar-collapse justify-content-end" id="navbarNav">
@@ -93,11 +93,6 @@
 		<style>
 			#progressbars {
 				margin-left: 2px;
-			}
-
-			.navbar-toggler {
-				border: none;
-				padding: 0;
 			}
 		</style>
 		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
