--- a/japandrama.html
+++ b/japandrama.html
@@ -20,7 +20,7 @@
 	<body>
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top fuck" style="background-color: #00cc99;">
 			<div class="container fuck">
-				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
+				<a class="navbar-brand" href="#" onclick="javascript:location.href='japandrama.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
 					宅宅懶人搜
 				</a>
