--- a/ptt.html
+++ b/ptt.html
@@ -24,7 +24,7 @@
 		<!-- 標頭 -->
 		<nav class="navbar navbar-expand-md navbar-dark sticky-top" style="background-color: #00cc99;">
 			<div class="container">
-				<a class="navbar-brand" href="#" onclick="javascript:location.href='index.html';" style="font-size: 24px;">
+				<a class="navbar-brand" href="#" onclick="javascript:location.href='ptt.html';" style="font-size: 24px;">
 					<img class="mr-2" src="./192x192.png" height="36" class="d-inline-block align-top" alt="">
 					宅宅懶人搜
 				</a>
